Important changes from 1.4.3 => 1.5
============================================================
Passwords should be set with a project.ini->salt. Salt is now a required project setting!
Setting rules for user passwords has changed and has become more powerfull, unless you do not set them.
The table gems__staff is split into gems__staff, gems__user_logins with generic login data and gems__users_passwords containing db stored password information.
GemsEscort->afterLogin(), ->afterLogout() and ->loadLoginInfo(0 are now all handled by Gems_User_UserDefinitionInterface objects.
GemsEscort->session kept for compatibility reasons, but use should be stopped.
The table gems__user_ids provides unique and non-sequential user ids accross gems__staff and gems__respondents.
The gems__respondent.grs_bsn has been renamed to grs_ssn, to make the code more international.
MailController is now called MailTemplateController.
EmailController is now called CronController (with stub for compatibility).
ModelAbstract now declares an protected _load instead of a public load abstract, for implementation of setOnLoad() functions, check your own Models for overloading load() or loadXX() functions.

Important changes from 1.4.2 => 1.4.3
============================================================
 * gtr_organisations renamed to gtr_organizations
 * table gems__countries is no longer in use

Important changes from 1.4.1 => 1.4.2
============================================================
 * To have an autosubmit form it is enough now to just use $form->setAutoSubmit($href, $targetId)
 * Introduced Gems_FormattedData, which takes a model and array of data and applies all formatting rules to the data
   (see export for more info)
 * The menu is reorganised and some items no longers have privileges assigned to them. Be careful with project menus!
 * Tooltip decorator now uses jQuery icon instead of an image