@@ -126,7 +126,7 @@ class Gems_Tracker_RespondentTrack extends Gems_Registry_TargetAbstract
      */
     public function _checkTrackCount($userId)
     {
-        $sqlCount  = 'SELECT COUNT(*) AS count, COALESCE(SUM(CASE WHEN gto_completion_time IS NULL THEN 0 ELSE 1 END), 0) AS completed
+        $sqlCount  = 'SELECT COUNT(*) AS count, SUM(CASE WHEN gto_completion_time IS NULL THEN 0 ELSE 1 END) AS completed
             FROM gems__tokens
             JOIN gems__reception_codes ON gto_reception_code = grc_id_reception_code AND grc_success = 1
             WHERE gto_id_respondent_track = ?';
@@ -142,6 +142,9 @@ class Gems_Tracker_RespondentTrack extends Gems_Registry_TargetAbstract
                         ->onlySucces();
 
                 $values['gr2t_end_date'] = $tokenSelect->fetchOne();
+
+                //Handle TrackCompletionEvent
+                $this->handleTrackCompletion($values, $userId);
             } else {
                 $values['gr2t_end_date'] = null;
             }
@@ -620,6 +623,24 @@ class Gems_Tracker_RespondentTrack extends Gems_Registry_TargetAbstract
         }
 
         return 0;
+    }
+
+    /**
+     * Find out if there are track completion events and delegate to the event if needed
+     *
+     * @param array $values
+     * @param int $userId
+     */
+    public function handleTrackCompletion(&$values, $userId) {
+        // Process any events
+        $trackEngine = $this->getTrackEngine();
+
+        //to be backward compatible, first check if the engine has a
+        if (is_callable(array($trackEngine, 'getTrackCompletionEvent'))) {
+            if ($event = $this->tracker->getTrackModel()->getTrackCompletionEvent($this->getTrackId())) {
+                $event->processTrackCompletion($this, $values, $userId);
+            }
+        }
     }
 
     /**
