@@ -1,3 +1,7 @@
+Important changes from 1.5.0 => 1.5.1
+============================================================
+New event introduced: TrackCompletedEvent
+
 Important changes from 1.4.3 => 1.5
 ============================================================
 Passwords should be set with a project.ini->salt. Salt is now a required project setting!
